syntax = "proto3";

package auth;

option go_package = "./auth";

import "google/protobuf/timestamp.proto";

// AuthService manages user authentication and authorization
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
}

message User {
  uint64 id = 1;
  string email = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  User user = 1;
  string token = 2;
  string error = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
  string error = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  uint64 user_id = 2;
  string error = 3;
}

message GetUserByIDRequest {
  uint64 id = 1;
}

message GetUserByIDResponse {
  User user = 1;
  string error = 2;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
  string error = 2;
}
